--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "forkify",
   "version": "1.0.0",
   "description": "Recipe",
-  "default" : "index.html",
+  "default": "index.html",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build  index.html --dist-dir ./dist"
@@ -20,6 +20,7 @@
   "dependencies": {
     "core-js": "^3.25.3",
     "fractional": "^1.0.0",
+    "fracty": "^1.0.11",
     "regenerator-runtime": "^0.13.9"
   }
 }
